--- a/.azure-pipelines/weekly-preview-generation.yml
+++ b/.azure-pipelines/weekly-preview-generation.yml
@@ -23,6 +23,13 @@ parameters:
   - name: Sign
     type: boolean
     default: true
+  - name: CreatePullRequest
+    type: boolean
+    default: true
+  - name: SkipOpenAPIDocsDownload
+    displayName: Skip OpenAPI Docs Download
+    default: false
+    type: boolean
 
 variables:
   Branch: "WeeklyPreviewRefresh"
@@ -52,6 +59,7 @@ jobs:
           BaseBranch: $(BaseBranch)
           BuildAgent: $(BuildAgent)
           SkipForceRefresh: $(SkipForceRefresh)
+          SkipOpenAPIDocsDownload: ${{ parameters.SkipOpenAPIDocsDownload }}
 
   - job: MsGraphPsSdkWeeklyGeneration
     dependsOn: RefreshOpenAPIDocuments
@@ -101,3 +109,9 @@ jobs:
               allowPackageConflicts: true
       - template: ./generation-templates/generate-command-metadata.yml
       - template: ./common-templates/security-post-checks.yml
+      - ${{ if eq(parameters.CreatePullRequest, true) }}:
+        - template: common-templates/create-pr.yml
+          parameters:
+            BaseBranch: $(BaseBranch)
+            Title: "[v2] Weekly OpenApiDocs Refresh"
+            Body: "This pull request was automatically created by Azure Pipelines. **Important** Check for unexpected deletions or changes in this PR."
