--- a/.azure-pipelines/weekly-preview-generation.yml
+++ b/.azure-pipelines/weekly-preview-generation.yml
@@ -64,7 +64,7 @@ jobs:
   - job: MsGraphPsSdkWeeklyGeneration
     dependsOn: RefreshOpenAPIDocuments
     displayName: Microsoft Graph PowerShell SDK Generation
-    condition: succeeded()
+    condition: and(succeeded(), ne(dependencies.RefreshOpenAPIDocuments.outputs['OpenAPIDocDiff.ModulesWithChanges'], ''))
     timeoutInMinutes: 840
     variables:
       WeeklyBranch: $[ dependencies.RefreshOpenAPIDocuments.outputs['ComputeBranch.WeeklyBranch'] ]
