--- a/.azure-pipelines/common-templates/download-openapi-docs.yml
+++ b/.azure-pipelines/common-templates/download-openapi-docs.yml
@@ -66,7 +66,8 @@ steps:
       targetType: "inline"
       script: |
         Write-Host "SkipOpenAPIDocsDownload: ${{ parameters.SkipOpenAPIDocsDownload }}"
-        if (${{ parameters.SkipOpenAPIDocsDownload }} -eq "True") {
+        Write-Host (${{ parameters.SkipOpenAPIDocsDownload }}).GetType()
+        if ('${{ parameters.SkipOpenAPIDocsDownload }}' -eq 'True') {
           $ModuleNames = "Skipped"
           Write-Warning "Skipped OpenAPI Docs Download."
         } else  {
