Push local commits before PR creation.

--- a/.azure-pipelines/common-templates/create-pr.yml
+++ b/.azure-pipelines/common-templates/create-pr.yml
@@ -27,5 +27,5 @@ steps:
 
         git status
         gh auth login
+        git push "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git"
         gh pr create -t $Title -b $Body -B $BaseBranchName
-        git status
