--- a/.azure-pipelines/common-templates/security-pre-checks.yml
+++ b/.azure-pipelines/common-templates/security-pre-checks.yml
@@ -1,21 +1,15 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 steps:
-  - task: CredScan@2
+  - task: CredScan@3
     displayName: "Run CredScan"
     inputs:
       debugMode: false
-      batchSize: 20
       toolMajorVersion: "V2"
-      searchersFileType: "Skype"
+      scanFolder: '$(Build.SourcesDirectory)/src'
 
-  - task: PoliCheck@1
+  - task: PoliCheck@2
     displayName: "Run PoliCheck"
-    condition: and(succeeded(), eq(eq(variables['Build.SourceBranch'], 'refs/heads/main'), false))
     inputs:
-      targetType: F
-      SOMEnabled: true
-      optionsFC: 0
-      optionsXS: 0
-      optionsHMENABLE: 0
-      continueOnError: true
+      inputType: CmdLine
+      cmdLineArgs: '/F:$(Build.SourcesDirectory)/src /T:9 /Sev:"1|2" /PE:2 /O:poli_result_src.xml'
