--- a/.azure-pipelines/common-templates/esrp/codesign.yml
+++ b/.azure-pipelines/common-templates/esrp/codesign.yml
@@ -10,7 +10,7 @@ parameters:
       default: ".*.dll"
 
 steps:
-    - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
+    - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@2
       displayName: ESRP DLL CodeSigning
       enabled: true
       inputs:
@@ -18,6 +18,7 @@ steps:
           FolderPath: ${{ parameters.FolderPath }}
           Pattern: ${{ parameters.Pattern }}
           signConfigType: inlineSignParams
+          UseMinimatch: true
           inlineOperation: |
               [
                   {
